--- a/_/css/style.css
+++ b/_/css/style.css
@@ -37,7 +37,7 @@ textarea:-moz-placeholder { color:#a9a9a9; }
 /* My Styles
 -------------------------------------------------------------------------------*/
 body
- { background: url('http://farm4.staticflickr.com/3821/9050490511_d803f18049_h.jpg'); background-attachment: fixed; background-size: cover; background-color: #333; }
+ { /*background: url('http://farm4.staticflickr.com/3821/9050490511_d803f18049_h.jpg'); background-attachment: fixed; background-size: cover; background-color: #333;*/ }
 
 #sticky { opacity: 0; position: fixed; text-align: center; width: 100%; top: 1em;}
 div#sticky {    -webkit-transition: opacity .6s ease-in; }
