--- a/_/css/style.css
+++ b/_/css/style.css
@@ -11,7 +11,7 @@
 
 /* A Linux- and Windows-friendly sans-serif font stack: http://prospects.mhurrell.co.uk/post/updating-the-helvetica-font-stack */
 body {font: 16px "Merriweather", serif;}
-
+p { font-size: 1em; line-height: 1.6; text-align: justify }
 /* Using local fonts? Check out Font Squirrel's webfont generator: http://www.fontsquirrel.com/tools/webfont-generator */
 
 /* We like off-black for text. */
@@ -39,13 +39,17 @@ textarea:-moz-placeholder { color:#a9a9a9; }
 body
  { /*background: url('http://farm4.staticflickr.com/3821/9050490511_d803f18049_h.jpg'); background-attachment: fixed; background-size: cover; background-color: #333;*/ }
 
-#sticky { opacity: 0; position: fixed; text-align: center; width: 100%; top: 1em;}
+#sticky { opacity: 0; position: fixed; text-align: center; width: 100%; top: 0; }
 div#sticky {    -webkit-transition: opacity .6s ease-in; }
+#sticky-content { width: 100%; max-width: 760px; margin: 0 auto; padding: .5em;}
+#sticky-content h2 { color: #fff; }
+
 header {  /*padding: 12em 0;*/ background-color: rgba(256,256,256,.9);}
 h1 { font-family: "Playfair Display",serif; font-size: 6em; font-weight: 900; text-align: center; color: #222;}
   .be { font-size: .4em; display: inline-block; vertical-align: middle; font-style: italic; font-weight: 400; }
+h2 { font-family: "Playfair Display",serif; font-size: 1.5em; font-weight: 300; text-align: center; }
 
-.info { width: 50%; min-width: 320px; margin: 0 auto;}
+p.info { width: 50%; min-width: 320px; margin: 0 auto 4em; line-height: 1.3; }
 
   /* borders */
 
@@ -55,10 +59,12 @@ h1 { font-family: "Playfair Display",serif; font-size: 6em; font-weight: 900; te
 
 .wrapper { width: 100%; max-width: 960px; margin: 0 auto;}
 
-section p { margin-bottom: 2em; }
-section p:last-child { margin: 0;}
-section { margin: 24em auto; width: 100%; max-width: 760px; background-color: #fff; padding: 4em;}
 
+section { margin: 9em auto 24em; width: 100%; max-width: 760px; background-color: #fff; padding: 4em;}
+section p { margin-bottom: 2em; }
+section p:last-child { margin-bottom: 0;}
+
+section#one { margin-top: 0;}
 section#three { padding: 0; max-width: none;}
 section#five { 	
 	max-width: none;
@@ -68,7 +74,17 @@ section#five {
 	background-attachment: fixed; 
 	padding: 0; 
 }
+
+img.dropcap { float: left; margin-right: .5em; width: 4em; height: auto; max-width: 100px; }
 footer { text-align: center;}
+
+#slug { width: 100%; height: 24em; }
+.trigger { width: 100%; height: 1px; }
+#begin { width: 100%; height: 9em; }
+.button { margin: 0 auto; max-width: 70px; }
+.button img { opacity: .5; -webkit-transition: opacity .3s; }
+.button img:hover { opacity: .9; }
+
 /* Print styles!
 -------------------------------------------------------------------------------*/
 @media print {
